# karang_lestari

./: .gitattributes  Cargo.toml  README.md  build.py  build.rs
.github/workflows/: ci.yaml  release.yaml
assets/animation_graphs/: turtle_animations.animgraph.ron
assets/models/: sea_turtle.glb
assets/models/objects/: acropora_2_anten_v.glb  acropora_3_anten.glb  acropora_4_anten.glb  acropora_abrolhosensis_anten.glb  acropora_anten.glb  acropora_cytherea_2_komang.glb  acropora_cytherea_anten.glb  acropora_cytherea_pink_2_komang.glb  acropora_cytherea_pink_anten.glb  acropora_natalensis_komang.glb  acropora_sukarnoi_komang.glb  big_brain_paula_q.glb  big_sponge_paula.glb  block_arch_paula.glb  concrete_dome_anten.glb  concrete_turtle_anten.glb  concrete_turtle_komang.glb  coral_table_komang.glb  diploastrea_heliopora_komang.glb  favia_komang.glb  leptoria_phrygia_2_anten.glb  leptoria_phrygia_komang.glb  les_komang.glb  lobophytum_komang.glb  mixed_coral_anten.glb  montipora_digitata_komang.glb  pincushion_starfish_komang.glb  pocillopora_meandrina_komang.glb  porites_lutea_2_anten.glb  porites_lutea_3_anten.glb  porites_lutea_4_komang.glb  porites_lutea_5_anten.glb  porites_lutea_6_anten.glb  porites_lutea_7_anten.glb  porites_lutea_anten_q.glb  small_yellow_coral_paula.glb  sponge_4_anten.glb  sponge_5_anten.glb  (+7 more)
meta/: Info.plist  entitlements.plist
src/: chunked_env.rs  env_manager.rs  fishy.rs  height_noise.rs  main.rs  object_manager.rs  region_sampler.rs  smooth_math.rs  turtle_model.rs
src/camera/: components.rs  plugin.rs  systems.rs
web/: index.html
(+19 files in other folders)
